@@ -14,14 +14,14 @@
 extern "C" {
 #endif
 
-  _CRTIMP errno_t __cdecl _access_s(const char *_Filename,int _AccessMode);
+  errno_t __cdecl _access_s (const char *_Filename,int _AccessMode);
   _CRTIMP errno_t __cdecl _chsize_s(int _FileHandle,__int64 _Size);
   _CRTIMP errno_t __cdecl _mktemp_s(char *_TemplateName,size_t _Size);
   _CRTIMP errno_t __cdecl _umask_s(int _NewMode,int *_OldMode);
 
 #ifndef _WIO_S_DEFINED
 #define _WIO_S_DEFINED
-  _CRTIMP errno_t __cdecl _waccess_s(const wchar_t *_Filename,int _AccessMode);
+  errno_t __cdecl _waccess_s (const wchar_t *_Filename,int _AccessMode);
   _CRTIMP errno_t __cdecl _wmktemp_s(wchar_t *_TemplateName,size_t _SizeInWords);
 #endif
 
